# crowdin-translation-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  claude_desktop_config_example.json  claude_desktop_config_uvx.json  pyproject.toml
src/translation_mcp/: __init__.py  classifier.py  config.py  crowdin_client.py  server.py
