[project]
name = "translation-mcp"
version = "2.0.0"
description = "MCP server for Crowdin translation automation - works with any AI client"
authors = [{name = "Yurii Trofimov"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "crowdin-api-client>=1.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
translation-mcp = "translation_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
